# networkit

./: .gitmodules  CMakeLists.txt  Eval.ipynb  Expected_Average_Degrees.ipynb  SConstruct  build_curveball-im.sh  curveball-im_test.sh  main_autocorrelation_degreeintervalswitching.cpp  recompile_curveball-im.sh  setup.py
experiments/: .edgeswap_bench.py.swp  AutocorrelationPlots.ipynb  ReproduceResults.ipynb  WorstCasePlots.ipynb  autocorr_analysis.py  autocorr_analysis2.py  benchmark_const_runtime.sh  benchmark_runtime.py  edgeswap_autocorr.py  edgeswap_metrics.py  independence_datagen.sh  power.gml  power_autocorr.py  power_autocorr.sh  realistic_datagen_pow4_full.sh  uniform_comparison.sh
include/networkit/randomization/: AutocorrelationAnalysis.hpp  Curveball.hpp  DegreeIntervalSwitching.hpp  DegreeIntervalSwitchingSeparated.hpp
networkit/: _NetworKit.pyx  __init__.py  curveball.py  randomization.pyx
networkit/cpp/curveball/: AutocorrelationAnalysis.cpp  AutocorrelationAnalysis.h  Curveball.cpp  Curveball.h  CurveballAdjacencyList.cpp  CurveballAdjacencyList.h  CurveballBase.h  CurveballHelper.h  CurveballIM.cpp  CurveballIM.h  CurveballMaterialization.cpp  CurveballMaterialization.h  CurveballTFP.cpp  CurveballTFP.h  EdgeSwitchingMarkovChainRandomization.cpp  (+17 more)
networkit/cpp/randomization/: AutocorrelationAnalysis.cpp  CMakeLists.txt  Curveball.cpp  CurveballImpl.hpp  DegreeIntervalSwitching.cpp  DegreeIntervalSwitchingSeparated.cpp
networkit/cpp/randomization/test/: AutocorrelationAnalysisGTest.cpp  CMakeLists.txt
networkit/test/: test_randomization.py
(+27 files in other folders)
